--- a/package.json
+++ b/package.json
@@ -19,16 +19,26 @@
     "@angular/platform-browser": "2.4.8",
     "@angular/platform-browser-dynamic": "2.4.8",
     "@angular/platform-server": "2.4.8",
+    "@ionic-native/core": "^3.4.4",
+    "@ionic-native/geofence": "^3.4.4",
+    "@ionic-native/geolocation": "^3.4.4",
+    "@ionic-native/network": "^3.4.4",
+    "@ionic-native/splash-screen": "^3.4.4",
+    "@ionic-native/status-bar": "^3.4.4",
     "@ionic/storage": "2.0.0",
+    "@types/google-maps": "^3.2.0",
+    "angular2-google-maps": "^0.17.0",
     "ionic-angular": "2.2.0",
-    "ionic-native": "2.4.1",
     "ionicons": "3.0.0",
+    "node-js-marker-clusterer": "^1.0.0",
     "rxjs": "5.0.1",
     "sw-toolbox": "3.4.0",
+    "typescript": "2.0.9",
     "zone.js": "0.7.2"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "1.1.4",
+    "@ionic/app-scripts": "^1.2.5",
+    "sw-toolbox": "3.4.0",
     "typescript": "2.0.9"
   },
   "cordovaPlugins": [
